--- a/Lottery/love.html
+++ b/Lottery/love.html
@@ -24,7 +24,7 @@
     function clickLottery() {
         RandomInt = getRandom(1, 19);
         //隨機籤詩
-        $('#StickPic').attr('src', `resource/love/${RandomInt}.JPG`);
+        $('#StickPic').attr('src', `resource/love/${RandomInt}.jpg`);
         StickShow();
     }
 
