--- a/Lottery/wealth.html
+++ b/Lottery/wealth.html
@@ -24,7 +24,7 @@
     function clickLottery() {
         RandomInt = getRandom(1, 26);
         //隨機籤詩
-        $('#StickPic').attr('src', `resource/wealth/${RandomInt}.JPG`);
+        $('#StickPic').attr('src', `resource/wealth/${RandomInt}.jpg`);
         StickShow();
     }
 
