--- a/Lottery/work.html
+++ b/Lottery/work.html
@@ -24,7 +24,7 @@
     function clickLottery() {
         RandomInt = getRandom(1, 34);
         //隨機籤詩
-        $('#StickPic').attr('src', `resource/work/${RandomInt}.JPG`);
+        $('#StickPic').attr('src', `resource/work/${RandomInt}.jpg`);
         StickShow();
     }
 
