--- a/Lottery/wealth.html
+++ b/Lottery/wealth.html
@@ -63,7 +63,7 @@
 
                 <div id="Sitck" class="hide">
                     <div class="CloseBlock">
-                        <img src="resource/close.png" alt="" id="ClosePic" onclick="StickHide()">
+                        <img src="resource/close.png" alt="" id="ClosePic" onclick="StickShow()">
                     </div>
                     <div class="StickBlock">
                         <img id="StickPic" src="resource/1.JPG" alt="">
