--- a/Lottery/lotteryPage.html
+++ b/Lottery/lotteryPage.html
@@ -33,13 +33,12 @@
 
     .WhiteBackgroundPic {
         height: 70vh;
-        margin-top: 15vh;
+        margin: 15vh 0 -65vh 0;
         display: inline-block;
     }
 
     .LotteryGIF {
         height: 60vh;
-        margin-top: -65vh;
     }
 
     .TestBlock {
@@ -95,7 +94,7 @@
             removeGIF();
             showGIF();
         }, 3700)
-        StickShow();
+        randomStick();
     }
 
     function randomStick() {
@@ -149,7 +148,7 @@
                         <a href="lotteryPage.html"><img src="resource/close.png" alt="" id="ClosePic"></a>
                     </div>
                     <div class="StickBlock">
-                        <img id="StickPic" src="resource/work/1.JPG" alt="">
+                        <img id="StickPic" src="resource/work.png" alt="">
                     </div>
                 </div>
 
