--- a/Lottery/lotteryPage.html
+++ b/Lottery/lotteryPage.html
@@ -100,7 +100,7 @@
     function randomStick() {
         RandomInt = getRandom(1, 34);
         //隨機籤詩
-        $('#StickPic').attr('src', `resource/work/${RandomInt}.JPG`);
+        $('#StickPic').attr('src', `resource/work/${RandomInt}.jpg`);
         StickShow();
     }
 
