--- a/Lottery/work.html
+++ b/Lottery/work.html
@@ -60,6 +60,7 @@
     <div class="width">
         <div class="maxwidth">
             <div class="bgsetting workbg">
+
                 <div class="header">
                     <a href="love.html">
                         <div class="headeroptions headerleftoptions">
@@ -72,6 +73,7 @@
                         </div>
                     </a>
                 </div>
+
                 <div class="poemcancontent">
                     <img src="resource/worklottery.png" alt="工作籤筒" id="poemCan" onclick="clickLottery()">
                 </div>
@@ -84,7 +86,7 @@
 
                 <div id="poemContent" class="poemhidden">
                     <div class="closecontent">
-                        <a href="lotteryPage.html">
+                        <a href="work.html">
                             <img src="resource/close.png" id="closeBtn" alt="" onclick="switchPoem()">
                         </a>
                     </div>
@@ -103,7 +105,8 @@
                         <img src="resource/whitebackground.jpg" alt="" class="whitebgpic">
                     </div>
                     <div class="cutcontent">
-                        <img src="resource/Lottery/workpoemanimation.gif" alt="" class="poemanimation" id="poemAnimation">
+                        <img src="resource/Lottery/workpoemanimation.gif" alt="" class="poemanimation"
+                            id="poemAnimation">
                     </div>
                 </div>
             </div>
