--- a/Lottery/index.html
+++ b/Lottery/index.html
@@ -16,26 +16,26 @@
 </head>
 
 <body>
-    <div class="Width">
-        <div class="MaxWidth MinHeight">
-            <div class="Options LoveOption">
-                <div class="Logo">
+    <div class="width">
+        <div class="maxwidth minheight">
+            <div class="options loveoption">
+                <div class="logocontent">
                     <a href="love.html">
-                        <img src="resource/love.png" alt="愛情圖示" class="LogoPic LoveLogoPic">
+                        <img src="resource/love.png" alt="愛情圖示" class="logopic">
                     </a>
                 </div>
             </div>
-            <div class="Options WealthOption">
-                <div class="Logo">
+            <div class="options wealthoption">
+                <div class="logocontent">
                     <a href="wealth.html">
-                        <img src="resource/wealth.png" alt="財運圖示" class="LogoPic WealthLogoPic">
+                        <img src="resource/wealth.png" alt="財運圖示" class="logopic">
                     </a>
                 </div>
             </div>
-            <div class="Options WorkOption">
-                <div class="Logo">
+            <div class="options workoption">
+                <div class="logocontent">
                     <a href="work.html">
-                        <img src="resource/work.png" alt="工作圖示" class="LogoPic WorkLogoPic">
+                        <img src="resource/work.png" alt="工作圖示" class="logopic">
                     </a>
                 </div>
             </div>
