--- a/Lottery/wealth.html
+++ b/Lottery/wealth.html
@@ -19,10 +19,10 @@
     const gifInterval = 3700;
 
     function clickPoemCan() {
+        document.getElementById('poemAnimation').src = "resource/Lottery/wealthpoemanimation.gif";
         switchPoemAnimation();
-        $('poemAnimation').src = "resource/Lottery/wealthpoemanimation.gif";
         setTimeout(function () {
-
+            document.getElementById('poemAnimation').src = "resource/Lottery/workpoemanimation.gif";
             switchPoemAnimation();
             takeAPoem();
         }, gifInterval)
@@ -43,7 +43,6 @@
         var text = document.getElementById("poemContent");
         text.classList.toggle("poemhidden");
         text.classList.toggle("poemshowing");
-        $('poemAnimation').src = "resource/Lottery/wealthpoemanimation2.gif";
     }
 
     function switchPoemAnimation() {
@@ -100,7 +99,7 @@
                         <img src="resource/wealthanimationbg.jpg" alt="動圖背景" class="whitebgpic">
                     </div>
                     <div class="cutcontent">
-                        <img src="resource/Lottery/wealthpoemanimation2.gif" alt="抽籤動圖" class="poemanimation"
+                        <img src="resource/Lottery/workpoemanimation.gif" alt="抽籤動圖" class="poemanimation"
                             id="poemAnimation">
                     </div>
                 </div>
