--- a/demo/index.html
+++ b/demo/index.html
@@ -130,7 +130,7 @@
             </div>
             <div class="footer-btn">
                 <a href="#">
-                    <span class="footer-btn-text">Click to Mail Us!</span>
+                    <div class="footer-btn-text">Click to Mail Us!</div>
                 </a>
             </div>
 
