--- a/demo/index.html
+++ b/demo/index.html
@@ -53,27 +53,37 @@
             <div class="menu">
                 <a href="#">
                     <div class="menu-item">
-                        PAGE1
+                        <p class="menu-item-text">
+                            PAGE1
+                        </p>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu-item">
-                        PAGE2
+                        <p class="menu-item-text">
+                            PAGE2
+                        </p>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu-item">
-                        PAGE3
+                        <p class="menu-item-text">
+                            PAGE3
+                        </p>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu-item">
-                        PAGE4
+                        <p class="menu-item-text">
+                            PAGE4
+                        </p>
                     </div>
                 </a>
                 <a href="#">
                     <div class="menu-item">
-                        PAGE5
+                        <p class="menu-item-text">
+                            PAGE5
+                        </p>
                     </div>
                 </a>
             </div>
@@ -99,18 +109,24 @@
                 </div>
             </div>
             <div class="column">
-                <div class="col-item">
-                    <div class="col-item-img"></div>
-                    <p class="col-item-text">option1</p>
-                </div>
-                <div class="col-item col-item-center">
-                    <div class="col-item-img"></div>
-                    <p class="col-item-text">option2</p>
-                </div>
-                <div class="col-item">
-                    <div class="col-item-img"></div>
-                    <p class="col-item-text">option3</p>
-                </div>
+                <a href="#">
+                    <div class="col-item">
+                        <div class="col-item-img"></div>
+                        <p class="col-item-text">option1</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="col-item col-item-center">
+                        <div class="col-item-img"></div>
+                        <p class="col-item-text">option2</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="col-item">
+                        <div class="col-item-img"></div>
+                        <p class="col-item-text">option3</p>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="footer">
