--- a/newsletter/index.html
+++ b/newsletter/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,15 +7,9 @@
     <title>首頁</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="resource/css/allpage.css">
+    <link rel="stylesheet" href="resource/css/banner.css">
     <style>
-        a {
-            text-decoration: none;
-        }
-
-        .bg-light {
-            background-color: rgba(0, 0, 0, 0) !important;
-        }
-
         .banner {
             height: 100vh;
             width: 100%;
@@ -39,20 +33,6 @@
         .banner-height {
             height: 80%;
 
-        }
-
-        .normalHeader {
-            display: none;
-        }
-
-        @media (min-width:1000px) {
-            .normalHeader {
-                display: block;
-            }
-
-            .smallHeader {
-                display: none;
-            }
         }
 
         .authors {
@@ -99,48 +79,13 @@
                 width: 80%;
             }
         }
-
-
-
-
-
-
-
-
-        .content-title-background {
-            background-color: #5c7887;
-            text-align: center;
-            padding: 30px 0;
-            color: #FFF;
-            font-size: 40px;
-            font-weight: bolder;
-            margin: 20px 0;
-        }
-
-        .content-title-text-small {
-            font-size: 20px;
-        }
-
-        .content-text {
-            font-size: 20px;
-            padding: 0 40px;
-        }
-
-        .footer {
-            margin-top: 100px;
-            border-top: 0.1px solid #999;
-        }
-
-        .footer-text {
-            margin-top: 20px;
-        }
     </style>
 </head>
 
 <body>
     <div class="contanier-fulid">
         <div class="banner">
-            <div class="normalHeader">
+            <div class="normalheader">
                 <nav class="navbar navbar-expand-lg bg-light">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="index.html">文化勤報63期</a>
@@ -175,7 +120,7 @@
                     </div>
                 </nav>
             </div>
-            <div class="smallHeader">
+            <div class="smallheader">
                 <nav class="navbar bg-light">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="index.html">文化勤報63期</a>
@@ -244,7 +189,7 @@
     <div class="container-lg content-text">
         　　將沉悶的室內教育空間，轉移到戶外與大自然互動。在一個春天的清晨，一群人在游惠遠老師帶領下，前進山邊的聚落--車籠埔，開啟跨世代的對話之旅。<br /><br />
 
-        <span style="font-size: 23px; font-weight: bolder;">歷史是說過和做過事情的記憶。</span>--卡爾‧貝克如是說！記憶拼湊歷史！<br /><br />
+        <span class="content-text-focus">歷史是說過和做過事情的記憶。</span>--卡爾‧貝克如是說！記憶拼湊歷史！<br /><br />
 
         　　經由實際走訪，採訪數位年齡加起來超過250歲的指標性前輩，記錄他們精彩的故事及心路歷程，認識車籠埔的過往；運用微旅行的方式，一步一步踩過昔日山林墾荒的足跡。如今蠻貊不再，取而代之的是整潔的步道與里民彼此間的體貼關懷濃情密意。<br /><br />
 
