--- a/monzzle/index.html
+++ b/monzzle/index.html
@@ -103,13 +103,13 @@
                                 <a class="nav-link" href="index.html">首頁</a>
                             </li>
                             <li class="nav-item nav-item1">
-                                <a class="nav-link" href=".html">介紹</a>
+                                <a class="nav-link" href="introduction.html ">介紹</a>
                             </li>
                             <li class="nav-item nav-item2">
-                                <a class="nav-link" href="index.html">妖怪選單</a>
+                                <a class="nav-link" href="monsters.html">妖怪選單</a>
                             </li>
                             <li class="nav-item nav-item3">
-                                <a class="nav-link" href="index.html">購物車</a>
+                                <a class="nav-link" href="shoppingcart.html">購物車</a>
                             </li>
                         </ul>
                     </div>
