--- a/monzzle/index.html
+++ b/monzzle/index.html
@@ -72,12 +72,7 @@
             margin: 30px 0;
         }
 
-        .footer-text {
-            text-align: center;
-            border-top: 0.1px solid rgba(0, 0, 0, 0.2);
-            padding: 20px 0 30px 0;
-            margin-top: 100px;
-        }
+        
 
         /* allpage */
     </style>
@@ -259,7 +254,7 @@
         <div class="footer">
             <div class="container-fluid">
                 <div class="footer-text">
-                    Copyright &copy;2022 妖來妖去製作團隊.
+                    Copyright &copy;2022 妖來妖去製作團隊 版權所有.
                 </div>
             </div>
         </div>
