--- a/monzzle/introduction.html
+++ b/monzzle/introduction.html
@@ -7,17 +7,94 @@
     <title>妖來妖去-介紹</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/allpage.css">
-        <style>
-        /* index */
+    <link rel="stylesheet" href="css/allpage.css">
+    <style>
+        /* introduction */
+        .content-header {
+            justify-content: space-between;
+        }
+
+        .content-header-icon {
+            width: 45px;
+            height: 45px;
+        }
+
+        .content-header-left,
+        .content-header-right {
+            display: inline-block;
+        }
+
+        .content-header-right {
+            float: right;
+        }
+
+        .content-title {
+            font-size: 28px;
+            font-weight: bolder;
+            display: inline-block;
+            top: 5px;
+            position: relative;
+        }
+
+        .content-header-item {
+            display: inline-block;
+            font-size: 25px;
+            position: relative;
+            top: 3.5px;
+            text-decoration: underline;
+            font-weight: bolder;
+        }
+
+        .content-header-item-mgr {
+            margin-right: 20px;
+        }
 
 
+        .content-header {
+            border-bottom: 4px solid #000;
+        }
 
+        .col-10 {
+            padding: 0;
+        }
 
+        .member-banner {
+            height: 35vh;
+            width: 100%;
+            background-size: cover;
+            background-position: center center;
+            background-image: url('resource/carousel/1.jpg');
+            margin: 30px 0;
+        }
 
+        .title-text {
+            font-size: 25px;
+            font-weight: bolder;
+            padding: 20px 0;
+        }
+
+        .card-img-top {
+            border-radius: 99em !important;
+            padding: 10px;
+        }
+
+        .card {
+            border: 0
+        }
+
+        @media (max-width:600px) {
+            .content-header-right {
+                display: none;
+            }
+        }
+
+        .member,
+        .team {
+            border-bottom: 4px solid #000;
+            padding-bottom: 20px;
+        }
 
         /* allpage */
-        
     </style>
 </head>
 
@@ -60,27 +137,25 @@
 
     <div class="menu">
         <div class="menu-items">
-            <a class="" href="index.html">
+            <a href="index.html">
                 <div class="menu-item menu-item0">
-
                     <img src="resource/icon/home.png" class="menu-icon">
                     <div class="menu-item-text ">首頁</div>
-
                 </div>
             </a>
-            <a class="" href="introduction.html">
+            <a href="introduction.html">
                 <div class="menu-item menu-item1">
                     <img src="resource/icon/aboutus.png" class="menu-icon">
                     <div class="menu-item-text">介紹</div>
                 </div>
             </a>
-            <a class="" href="monsters.html">
+            <a href="monsters.html">
                 <div class="menu-item menu-item2">
                     <img src="resource/icon/monster.png" class="menu-icon">
                     <div class="menu-item-text">妖怪選單</div>
                 </div>
             </a>
-            <a class="" href="shoppingcart.html">
+            <a href="shoppingcart.html">
                 <div class="menu-item menu-item3">
                     <img src="resource/icon/shopping-cart.png" class="menu-icon">
                     <div class="menu-item-text">購物車</div>
@@ -88,6 +163,149 @@
             </a>
         </div>
     </div>
+
+
+    <div class="main">
+        <div class="container-lg">
+            <div class="row justify-content-center">
+                <div class="col-10 content-header">
+                    <div class="content-header-left">
+                        <img src="resource/icon/aboutus.png" class="content-header-icon">
+                        <div class="content-title">介紹</div>
+                    </div>
+                    <div class="content-header-right">
+                        <a href="#memberIntroduction">
+                            <div class="content-header-item content-header-item-mgr">組員介紹</div>
+                        </a>
+                        <a href="#teamIntroduction">
+                            <div class="content-header-item content-header-item-mgr">團隊介紹</div>
+                        </a>
+                        <a href="#subjextIntroduction">
+                            <div class="content-header-item ">專題介紹</div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-lg">
+            <div class="row justify-content-center">
+                <div class="col-10">
+                    <div class="member-banner"></div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="container-lg">
+            <div class="row justify-content-center">
+                <div class="col-10">
+                    <div class="member">
+                        <div class="title-text">組員介紹</div>
+                        <div class="card-group">
+                            <div class="card">
+                                <img src="resource/carousel/2.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">組員1</h5>
+                                    <p class="card-text">
+                                        個性：<br />
+                                        專長：<br />
+                                        工作內容：<br />
+                                    </p>
+                                </div>
+
+                            </div>
+                            <div class="card">
+                                <img src="resource/carousel/3.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">組員2</h5>
+                                    <p class="card-text">
+                                        個性：<br />
+                                        專長：<br />
+                                        工作內容：<br />
+                                    </p>
+                                </div>
+
+                            </div>
+                            <div class="card">
+                                <img src="resource/carousel/4.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">組員3</h5>
+                                    <p class="card-text">
+                                        個性：<br />
+                                        專長：<br />
+                                        工作內容：<br />
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img src="resource/carousel/5.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">組員4</h5>
+                                    <p class="card-text">
+                                        個性：<br />
+                                        專長：<br />
+                                        工作內容：<br />
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img src="resource/carousel/6.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">組員5</h5>
+                                    <p class="card-text">
+                                        個性：<br />
+                                        專長：<br />
+                                        工作內容：<br />
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-lg">
+            <div class="row justify-content-center">
+                <div class="col-10">
+                    <div class="team">
+                        <div class="title-text">團隊介紹</div>
+                        <div class="content-text">
+                            　　介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字。<br /><br />
+                            　　介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字。
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-lg">
+            <div class="row justify-content-center">
+                <div class="col-10">
+                    <div class="subject">
+                        <div class="title-text">專題介紹</div>
+                        <div class="content-text">
+                            　　介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字。<br /><br />
+                            　　介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字。
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="footer">
+            <div class="container-fluid">
+                <div class="footer-text">
+                    Copyright &copy;2022 妖來妖去製作團隊 版權所有.
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
