--- a/monzzle/index.html
+++ b/monzzle/index.html
@@ -55,6 +55,19 @@
             font-weight: bolder;
         }
 
+        @media (max-width:600px) {
+            .banner-title {
+                font-size: 35px;
+                padding: 35px 15px;
+            }
+            .banner-text-focus{
+                font-size: 18px;
+            }
+            .banner-text{
+                padding: 8px 12px;
+            }
+        }
+
         @media (min-width:1000px) {
 
             .banner-title,
@@ -72,7 +85,7 @@
             margin: 30px 0;
         }
 
-        
+
 
         /* allpage */
     </style>
